# app/Http/Controllers/BigcommerceController.php
@@ -8,14 +8,14 @@ use App\Services\ZohoWorkdriveService;
 use Illuminate\Support\Facades\Storage;
 
 
+
 class BigcommerceController extends Controller
 {
 
 /**
      * @OA\Get(
-     *     path="/api/test",
+     *     path="/api/testsalida",
      *     summary="Test API",
-     *     tags={"Bigcommerce"},
      *     description="Returns a test message",
      *     @OA\Response(
      *         response=200,
@@ -32,25 +32,14 @@ class BigcommerceController extends Controller
      */
 
 
-public function uploadFile2()
+    public function uploadFileCsv()
     {
-      /* $variable = new ZohoOAuthService();
-       $token_var = $variable->getAccessToken()->access_token;*/
-        $file_name = 'ejemplo.pdf';
-        /*$path = 'pdf/' . $file_name;
-
-            $pdf->SetCompression(true);
-            $outputContent = $pdf->Output('', 'S');
-
-        Storage::disk('public')->put($path, $outputContent);*/
-
-
-        $file_path = storage_path('app/public/pdf/' . $file_name);
-
+      
+        $file_name = 'outputfile.pdf';   /* aqui va el archivo csv**/ 
+        $file_path = storage_path('app/public/output_file/' . $file_name);
         $serviceWorkdrive = new ZohoWorkdriveService();
-        $upload_file = $serviceWorkdrive->uploadFile($file_name, env('ZOHO_WORKDRIVE_FOLDER'), $file_path);
-        dd($upload_file);
-        /*if ($upload_file['status'] == 'SUCCESS') {
+        $upload_file = $serviceWorkdrive->uploadFile($file_name, env('ZOHO_WORKDRIVE_FOLDER_OUTPUT_CSV'), $file_path);
+        if ($upload_file['status'] == 'SUCCESS') {
                         $resource_id = $upload_file['data'][0]['attributes']['resource_id'];
                         $share_file = $serviceWorkdrive->createExternaLinks($resource_id, $file_name);
 
@@ -62,8 +51,38 @@ public function uploadFile2()
 
                             }
                         }
-                   return ResponseHelper::error($th->getMessage(), 400);
+                   //return ResponseHelper::error($th->getMessage(), 400);
 
-        }*/
-}
+        }
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/testentrada",
+     *     summary="Test API entrada",
+     *     description="Returns a test message",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful response",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="API test route works!")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not Found"
+     *     )
+     * )
+     */
+    public function downloadFileExcel()
+    {
+        $file_name = 'inputfile.pdf';   /* aqui va el archivo xls**/ 
+        $file_path_to_save = storage_path('app/public/input_file/');
+        $serviceWorkdrive = new ZohoWorkdriveService();
+        $download_file = $serviceWorkdrive->downloadFile($file_name, env('ZOHO_WORKDRIVE_FOLDER_INPUT_XLS'), $file_path_to_save);
+        var_dump($download_file);
+       /* aqui la logica para descargar el file **/
+       
+    }
+
 }
